tests/ui/route-branch-double-recv.stderr
error[E0382]: use of moved value: `branch`
  --> tests/ui/route-branch-double-recv.rs:36:23
   |
33 |     let branch = futures::executor::block_on(endpoint.offer()).expect("test setup");
   |         ------ move occurs because `branch` has type `RouteBranch<'_, '_, 0>`, which does not implement the `Copy` trait
34 |     let first_recv = branch.recv::<g::Msg<7, FramePayload>>();
   |                             --------------------------------- `branch` moved due to this method call
35 |     core::hint::black_box(&first_recv);
36 |     let second_recv = branch.recv::<g::Msg<7, FramePayload>>();
   |                       ^^^^^^ value used here after move
   |
note: `hibana::endpoint::branch::<impl RouteBranch<'e, 'r, ROLE>>::recv` takes ownership of the receiver `self`, which moves `branch`
  --> src/endpoint/branch.rs
   |
   |         self,
   |         ^^^^
